--- a/waybar/themes/full.css
+++ b/waybar/themes/full.css
@@ -1,4 +1,4 @@
 window#waybar {
     background: rgba(30, 30, 46, 0.6);
-    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
